--- a/canvas.html
+++ b/canvas.html
@@ -14,7 +14,7 @@
             var canvas=document.querySelector("canvas");
             var cobj=canvas.getContext("2d");
             var obj=new shape(canvas,cobj);
-            obj.type="rect";
+            obj.type="star";
             obj.style="fill";
             obj.fillStyle="red";
             obj.draw();
